# AISDPoly

./: .gitignore  CMakeLists.txt  poltest.txt  polynom.g4
include/: lexeme.h  tarith.h  tcomp.h  thash.h  titertree.h  tlist.h  tpoly.h  tqueue.h  trule.h  tstack.h  ttree.h
parser/: CMakeLists.txt  countPolynomVisitor.cpp  countPolynomVisitor.h  polynom.interp  polynom.tokens  polynomBaseVisitor.h  polynomLexer.cpp  polynomLexer.h  polynomLexer.interp  polynomParser.cpp  polynomParser.h  polynomVisitor.h
sample/: CMakeLists.txt
src/: CMakeLists.txt  lexeme.cpp  tarith.cpp  tbitfield.cpp  tcomp.cpp  thash.cpp  titertree.cpp  tpoly.cpp  tqueue.cpp  trule.cpp  tset.cpp  tstack.cpp
test/: CMakeLists.txt  test_antlr.cpp  test_rulesystem.cpp  test_tarith.cpp  test_thash.cpp  test_titertree.cpp  test_tlist.cpp  test_tpoly.cpp  test_tqueue.cpp  test_tstack.cpp  test_ttree.cpp
